kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projetofiap-deployment
  labels:
    app: projetofiap-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projetofiap-deployment
  template:
    metadata:
      labels:
        app: projetofiap-deployment
    spec:
      containers:
        - name: c-projetofiap-deployment
          image: rm350010/projeto-fiap-1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
          resources:
            requests:
              cpu: 350m
