kubernetes/comanda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projetofiap-comanda-deployment
  labels:
    app: projetofiap-comanda-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projetofiap-comanda-deployment
  template:
    metadata:
      labels:
        app: projetofiap-comanda-deployment
    spec:
      containers:
        - name: c-projetofiap-deployment
          image: 168173199034.dkr.ecr.us-east-1.amazonaws.com/projeto-fiap-comanda:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /comanda/liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
          resources:
            requests:
              cpu: 200m

---

apiVersion: v1
kind: Service
metadata:
  name: comanda
spec:
  selector:
    app: projetofiap-comanda-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
