kubernetes/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.12-management-alpine
        ports:
        - containerPort: 15672
          name: management-port
        - containerPort: 5672
          name: amqp-port
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
  - port: 15672
    targetPort: 15672
    name: management-port
  - port: 5672
    targetPort: 5672
    name: amqp-port
  selector:
    app: rabbitmq
